# Assignment-2-3DFan-Working

./: .gitignore  CMakeLists.txt  README.md  build_web.bat  build_web.sh  script_build_and_run.bat
.github/workflows/: android.yml  build-and-deploy.yml  desktop.yml  pages.yml
Scene/: Fan.cpp  Fan.h  Model.h  Platform.h  Renderer.cpp  Renderer.h  ShaderHelper.h  main.cpp
android/: gradle.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shader/: FanFragment.glsl  FanVertex.glsl
android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
android/app/src/main/java/com/example/fan3d/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
cmake/: ImportDependencies.cmake
